delete unused XCOMs using psycorg-binary module

--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -1,2 +1,4 @@
 FROM apache/airflow:2.0.0-python3.8
 RUN pip install --no-cache-dir --user apache-airflow-providers-apache-cassandra
+RUN pip install --no-cache-dir --user apache-airflow-providers-presto
+RUN pip install --no-cache-dir --user scikit-learn
