--- a/config/docker-compose.yaml
+++ b/config/docker-compose.yaml
@@ -50,6 +50,9 @@ services:
       - ../PythonProcessors:/opt/airflow/PythonProcessors
       - ../utils.py:/opt/airflow/utils.py
       - ../ScyllaDBClient:/opt/airflow/ScyllaDBClient
+      - ../data:/opt/airflow/data
+      - ../settings.py:/opt/airflow/settings.py
+      - ../models:/opt/airflow/models
     depends_on:
       - postgres
       - redis
@@ -98,6 +101,9 @@ services:
       - ../PythonProcessors:/opt/airflow/PythonProcessors
       - ../utils.py:/opt/airflow/utils.py
       - ../ScyllaDBClient:/opt/airflow/ScyllaDBClient
+      - ../data:/opt/airflow/data
+      - ../settings.py:/opt/airflow/settings.py
+      - ../models:/opt/airflow/models
     command: scheduler
     depends_on:
       - postgres
@@ -120,6 +126,9 @@ services:
       - ../PythonProcessors:/opt/airflow/PythonProcessors
       - ../utils.py:/opt/airflow/utils.py
       - ../ScyllaDBClient:/opt/airflow/ScyllaDBClient
+      - ../data:/opt/airflow/data
+      - ../settings.py:/opt/airflow/settings.py
+      - ../models:/opt/airflow/models
     command: celery worker
     depends_on:
       - scheduler
@@ -137,6 +146,9 @@ services:
       - ../PythonProcessors:/opt/airflow/PythonProcessors
       - ../utils.py:/opt/airflow/utils.py
       - ../ScyllaDBClient:/opt/airflow/ScyllaDBClient
+      - ../data:/opt/airflow/data
+      - ../settings.py:/opt/airflow/settings.py
+      - ../models:/opt/airflow/models
     entrypoint: /bin/bash
     command: -c "airflow db init && airflow users create --firstname admin --lastname admin --email admin --password admin --username admin --role Admin"
     depends_on:
