--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -2,6 +2,7 @@ FROM apache/airflow:2.0.0-python3.8
 RUN pip install --no-cache-dir --user apache-airflow-providers-apache-cassandra
 RUN pip install --no-cache-dir --user apache-airflow-providers-presto
 RUN pip install --no-cache-dir --user scikit-learn
+RUN pip install --no-cache-dir --user pymongo
 RUN pip install --no-cache-dir --user cassandra-driver
 RUN pip install --no-cache-dir --user xlrd
 RUN pip install --no-cache-dir --user openpyxl
