Data Feed module configured for processing more than one solar plants data

--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,7 @@
 AIRFLOW__CORE__EXECUTOR=CeleryExecutor
 AIRFLOW__WEBSERVER__RBAC=False
 AIRFLOW__CORE__CHECK_SLAS=False
+AIRFLOW_VAR_FILES='{"files":[]}'
 AIRFLOW__CORE__STORE_SERIALIZED_DAGS=False
 AIRFLOW__CORE__PARALLELISM=50
 AIRFLOW__CORE__LOAD_EXAMPLES=False
